--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <section class="make-meme-container">
 
-            <canvas id="make-meme" onclick="onChangeSelected(event)"></canvas>
+            <canvas id="make-meme" onclick="onChangeSelected(event)" onmousemove="onMoveSelected(event)"></canvas>
 
             <div class="meme-edit-container flex wrap">
 
@@ -54,9 +54,9 @@
 
                 <div class="edit-btns-container">
                     <button class="increase-text edit-btn fas fa-expand-arrows-alt" title="Increase Text"
-                        onclick="onChangeFontSize('1')"></button>
+                        onclick="onUpdateFontSize('1')"></button>
                     <button class="decrease-text edit-btn fas fa-compress-arrows-alt" title="Decrease Text"
-                        onclick="onChangeFontSize('-1')"></button>
+                        onclick="onUpdateFontSize('-1')"></button>
                     <button class="move-up edit-btn fas fa-chevron-circle-up" title="Move Text Up"
                         onclick="onMoveLine('-10')"></button>
                     <button class="move-down edit-btn fas fa-chevron-circle-down" title="Move Text Down"
@@ -75,8 +75,14 @@
                         onclick="onTextAlign('right')"></button>
                 </div>
 
-                <div class="download-meme-container">
-                    <button class="download-meme">Download</button>
+                <div class="bottom-btns-container">
+                    <a href="#" class="download-meme" onmouseup="onDownloadMeme(this)"
+                        onmousedown="renderMeme(gMeme.selectedImgId, true)" download="my-meme.jpg">Download</a><br />
+                        <form action="" method="POST" enctype="multipart/form-data" onsubmit="uploadImg(this, event)">
+                            <input name="img" id="imgData" type="hidden" />
+                            <button class="btn share fab fa-facebook-square" onmousedown="renderMeme(gMeme.selectedImgId, true)" type="submit"></button>
+                            <div class="share-container"></div>
+                        </form>
                 </div>
 
             </div>
@@ -89,6 +95,7 @@
     </footer>
 
     <script src="js/utils.js"></script>
+    <script src="js/upload-service.js"></script>
     <script src="js/memeME-controller.js"></script>
     <script src="js/memeME-service.js"></script>
 
