--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>memeME - Make Your Own Meme For Free!</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="lib/fontawesome/css/all.css" rel="stylesheet">
+    <link href="css/list/main.css" rel="stylesheet">
 </head>
 
 <body onload="onInit()">
@@ -16,9 +17,9 @@
             <h1 class="logo">MemeME</h1>
         </a>
         <ul class="main-nav clean-list flex">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Home2</a></li>
-            <li><a href="#">Home3</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="memes.html">My Memes</a></li>
+            <li><a href="#">About</a></li>
         </ul>
     </header>
 
@@ -44,7 +45,7 @@
 
         <section class="make-meme-container">
 
-            <canvas id="make-meme" onclick="onChangeSelected(event)" onmousemove="onMoveSelected(event)"></canvas>
+            <canvas id="make-meme" onmousedown="onChangeSelected(event)"></canvas>
 
             <div class="meme-edit-container flex wrap">
 
@@ -73,16 +74,26 @@
                         onclick="onTextAlign('center')"></button>
                     <button class="align-right edit-btn fas fa-align-right" title="Move Text To Right"
                         onclick="onTextAlign('right')"></button>
+
+                        <button class="change-text-color edit-btn fas fa-palette" title="Change Text Color"
+                        onclick="onOpenChangeColor()"></button>
+                        <input type="color" name="font-color" onchange="onChangeFontColor()" value="#ffffff" hidden />
                 </div>
 
-                <div class="bottom-btns-container">
-                    <a href="#" class="download-meme" onmouseup="onDownloadMeme(this)"
-                        onmousedown="renderMeme(gMeme.selectedImgId, true)" download="my-meme.jpg">Download</a><br />
-                        <form action="" method="POST" enctype="multipart/form-data" onsubmit="uploadImg(this, event)">
-                            <input name="img" id="imgData" type="hidden" />
-                            <button class="btn share fab fa-facebook-square" onmousedown="renderMeme(gMeme.selectedImgId, true)" type="submit"></button>
-                            <div class="share-container"></div>
-                        </form>
+                <div class="bottom-btns-container flex wrap">
+
+                    <a href="#" class="edit-download-meme bottom-btn" onmouseup="onDownloadMeme(this)" onmousedown="clearMark()"
+                        download="my-meme.jpg">Download</a>
+
+                    <form action="" method="POST" enctype="multipart/form-data" onsubmit="uploadImg(this, event)">
+                        <input name="img" id="imgData" type="hidden" />
+                        <button class="fb-share btn share bottom-btn" onmousedown="clearMark()"
+                            type="submit">Share</button>
+                        <div class="share-container"></div>
+                    </form>
+
+                    <button class="save-meme bottom-btn" onmousedown="clearMark()" onmouseup="onSaveMeme(event)">Save Meme</button>
+
                 </div>
 
             </div>
@@ -94,8 +105,19 @@
         All rights reserved Shaiz &copy;
     </footer>
 
+    <div class="modal">
+        <div class="screen" onclick="onCloseModal()"></div>
+        <div class="modal-container">
+            <div class="modal-header">
+                <button class="close-modal fas fa-times-circle" onclick="onCloseModal()"></button>
+                <h2 class="modal-title"></h2>
+            </div>
+        </div>
+    </div>
+
     <script src="js/utils.js"></script>
     <script src="js/upload-service.js"></script>
+    <script src="js/memeME-savedController.js"></script>
     <script src="js/memeME-controller.js"></script>
     <script src="js/memeME-service.js"></script>
 
