--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="share-container"></div>
                     </form>
 
-                    <button class="save-meme bottom-btn" onmousedown="clearMark()" onmouseup="onSaveMeme(event)">Save Meme</button>
+                    <button class="save-meme bottom-btn" onmousedown="clearMark()" onmouseup="onSaveMeme(event)" ontouchstart="clearMark()">Save Meme</button>
 
                 </div>
 
