--- a/memes.html
+++ b/memes.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>memeME - Make Your Own Meme For Free!</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="lib/fontawesome/css/all.css" rel="stylesheet">
@@ -20,7 +20,7 @@
             <li class="quit-menu"><button onclick="toggleMenu()"></button></li>
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="memes.html">My Memes</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="https://www.linkedin.com/in/shai-sharakanski-7812b11a6/" target="_blank">About</a></li>
         </ul>
         <button onclick="toggleMenu()" class="btn-menu"></button>
     </header>
