--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <input type="text" onkeyup="onInlineChangeText(this, event)" onfocusout="onInlineChangeFinish()">
             </div>
 
-            <canvas id="make-meme" onmousedown="onChangeSelected(event)" ondblclick="onTnlineEdit()" ontouchmove="event.preventDefault()"></canvas>
+            <canvas id="make-meme" onmousedown="onChangeSelected(event)" ondblclick="onInlineEdit()" ontouchmove="event.preventDefault()"></canvas>
 
             <div class="meme-edit-container flex wrap">
 
