--- a/memes.html
+++ b/memes.html
@@ -5,21 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>memeME - Make Your Own Meme For Free!</title>
-    <link rel="stylesheet" href="css/main.css">
     <link href="lib/fontawesome/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate/animate.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 </head>
 
 <body onload="onInitSaved()">
     <section class="screen" onclick="toggleMenu()"></section>
-        
+
     <header class="main-header flex space-between align-center">
-        <a href="index.html">
-            <h1 class="logo">MemeME</h1>
-        </a>
+        <div class="logo flex align-center">
+            <img src="img/logo.png" alt="">
+            <a href="index.html">
+                <h1>MemeME</h1>
+            </a>
+        </div>
         <ul class="main-nav clean-list flex">
             <li class="quit-menu"><button onclick="toggleMenu()"></button></li>
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="memes.html">My Memes</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="memes.html">My Memes</a></li>
             <li><a href="https://www.linkedin.com/in/shai-sharakanski-7812b11a6/" target="_blank">About</a></li>
         </ul>
         <button onclick="toggleMenu()" class="btn-menu"></button>
