--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="instructions inst-inline-edit animated flash">
                         <h3>Double click on text for inline edit</h3>
                     </div>
-                    <a href="memes.html" class="instructions inst-saved-memes animated flash">
+                    <a href="memes.html" target="_blank" class="instructions inst-saved-memes animated flash">
                         Click to see your saved memes
                     </a>
                 </div>
