--- a/memes.html
+++ b/memes.html
@@ -12,7 +12,7 @@
 </head>
 
 <body onload="onInitSaved()">
-    <section class="screen" onclick="toggleMenu()"></section>
+    <section class="screen" onclick="onToggleMenu()"></section>
 
     <header class="main-header flex space-between align-center">
         <div class="logo flex align-center">
@@ -22,12 +22,12 @@
             </a>
         </div>
         <ul class="main-nav clean-list flex">
-            <li class="quit-menu"><button onclick="toggleMenu()"></button></li>
+            <li class="quit-menu"><button onclick="onToggleMenu()"></button></li>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="memes.html">My Memes</a></li>
             <li><a href="https://www.linkedin.com/in/shai-sharakanski-7812b11a6/" target="_blank">About</a></li>
         </ul>
-        <button onclick="toggleMenu()" class="btn-menu"></button>
+        <button onclick="onToggleMenu()" class="btn-menu"></button>
     </header>
 
     <main class="main-container">
