--- a/memes.html
+++ b/memes.html
@@ -23,8 +23,8 @@
         </div>
         <ul class="main-nav clean-list flex">
             <li class="quit-menu"><button onclick="onToggleMenu()"></button></li>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="memes.html">My Memes</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="memes.html">My Memes</a></li>
             <li><a href="https://www.linkedin.com/in/shai-sharakanski-7812b11a6/" target="_blank">About</a></li>
         </ul>
         <button onclick="onToggleMenu()" class="btn-menu"></button>
